# rescript-vitest

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  renovate.json  rescript.json  vitest.config.js
.claude/: settings.json.template  statusline.sh
.claude/agents/: build-resolver.md  code-reviewer.md  debugger.md  quick-search.md  release-manager.md  security-reviewer.md
.claude/commands/: add-feature.md  setup-project.md
.claude/examples/: README.md  (+4 more)
.devcontainer/: devcontainer.json.template
.github/: CODEOWNERS.template  PULL_REQUEST_TEMPLATE.md  dependabot.yml
__tests__/: Expect_test.res  Lifecycle_test.res  Vi_test.res  VitestConfig_test.res
docs/: mcp-servers.md  migration-to-plugins.md  quality-measurement.md  repository-structure.md
quality-datasets/: README.md  _TEMPLATE.yaml  code-reviewer.yaml
scripts/: evaluate-skills.sh
sphinx-docs/: .gitignore  .pa11yci.json  Makefile  conf.py  index.md  package.json  pyproject.toml
sphinx-docs/_static/css/: custom.css
sphinx-docs/_templates/: page.html  search.html
sphinx-docs/_templates/sidebar/: search.html
sphinx-docs/dev/: architecture.md  building.md  contributing.md  index.md  project-structure.md  setup.md
sphinx-docs/locale/ja/LC_MESSAGES/: index.po  sphinx.po
sphinx-docs/locale/ja/LC_MESSAGES/dev/: architecture.po  building.po  contributing.po  index.po  project-structure.po  setup.po
sphinx-docs/locale/ja/LC_MESSAGES/user/: changelog.po  configuration.po  index.po  installation.po  quickstart.po
sphinx-docs/user/: changelog.md  configuration.md  index.md  installation.md  quickstart.md
src/: Vi.res  Vitest.res  VitestConfig.res
(+106 files in other folders)
